# octoxlabscase

./: .env.dev  .env.docker  .env.test  .gitignore  README.md  docker-compose-test.yml  docker-compose.yml  manage.py  pyproject.toml  ruff.toml
common/: exceptions.py  handlers.py  responses.py  serializers.py  views.py
docker/: Dockerfile  docker-entrypoint.sh  seedelastic.py
hosts/: apps.py  selectors.py  urls.py  views.py
hosts/management/commands/: searchhosts.py
hosts/tests/: test_selectors.py
octox_auth/: apps.py  authentication.py  services.py  urls.py  views.py
octox_auth/tests/: test_services.py
octoxlabscase/: __init__.py  asgi.py  containers.py  settings.py  urls.py  wsgi.py
users/: models.py
users/management/commands/: createoctoxadmin.py  createoctoxuser.py
users/migrations/: 0001_initial.py
